observability/base/victoria-metrics-k8s-stack/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale
      namespace: infrastructure
  hostnames:
    - "grafana.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
