observability/base/victoria-metrics-k8s-stack/httproute-vmagent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmagent
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale-general
      namespace: infrastructure
  hostnames:
    - "vmagent-${cluster_name}.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: vmagent-victoria-metrics-k8s-stack
          port: 8429
