observability/base/victoria-metrics-k8s-stack/httproute-vmalertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalertmanager
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale-general
      namespace: infrastructure
  hostnames:
    - "vmalertmanager-${cluster_name}.${private_domain_name}"
  rules:
    - backendRefs:
        - name: vmalertmanager-victoria-metrics-k8s-stack
          port: 9093
