observability/base/victoria-metrics-k8s-stack/httproute-vmcluster.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale-general
      namespace: infrastructure
  hostnames:
    - "vm.${private_domain_name}"
  rules:
    - backendRefs:
        - name: vmselect-victoria-metrics-k8s-stack
          port: 8481
